refactor: UserService에서 shop 도메인 의존성 제거 및 탈퇴 메서드 분리
CartDAO, OrderRepository, DeliveryRepository를 UserService가 직접 의존해
user 도메인이 shop 도메인 내부 구현에 강하게 결합되어 있었음
shop 도메인 처리를 WithdrawFacade로 위임하고
UserService는 유저 논리 삭제만 담당하는 markAsWithdrawn()을 제공하도록 분리