@@ -1,16 +1,9 @@
 package com.project.shift.user.service;
 
-import java.util.List;
-
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.project.shift.shop.dao.CartDAO;
-import com.project.shift.shop.entity.Order;
-import com.project.shift.shop.repository.DeliveryRepository;
-import com.project.shift.shop.repository.OrderRepository;
 import com.project.shift.user.UserConstants;
 import com.project.shift.user.dto.LoginIdRequestDTO;
 import com.project.shift.user.dto.UserRegisterRequestDTO;
@@ -26,19 +19,16 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 @RequiredArgsConstructor
 public class UserService {
+
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
-    private final CartDAO cartDAO;
-    private final OrderRepository orderRepository;
-    private final DeliveryRepository deliveryRepository;
 
     @Transactional
     public Long join(UserRegisterRequestDTO userDTO) {
-    	// 1단계: 입력값 형식 검증
-        validateName(userDTO);  //사용자 이름 검증
-        validateTermsAgreement(userDTO); //약관 동의 검증
-        validatePasswordRule(userDTO.getPassword());     // 비밀번호 규칙
-        // 중복 체크: true = 이미 존재 = 가입 불가
+        validateName(userDTO);
+        validateTermsAgreement(userDTO);
+        validatePasswordRule(userDTO.getPassword());
+
         if (isLoginIdAvailable(userDTO.getLoginId())) {
             throw new IllegalArgumentException("이미 사용중인 아이디입니다.");
         }
@@ -46,95 +36,139 @@ public class UserService {
             throw new IllegalArgumentException("이미 사용중인 연락처입니다.");
         }
 
-        // 2단계: 저장
         UserEntity userEntity = convertToEntity(userDTO);
-        UserEntity savedEntity = userRepository.save(userEntity);
-
-        return savedEntity.getUserId();
+        return userRepository.save(userEntity).getUserId();
     }
 
-    //사용자 이름 검증
+    public boolean isLoginIdAvailable(String loginId) {
+        if (loginId == null || loginId.trim().isEmpty()) {
+            throw new IllegalArgumentException("아이디를 입력해주세요.");
+        }
+        if (loginId.length() < 4 || loginId.length() > 20) {
+            throw new IllegalArgumentException("아이디는 4자 이상 20자 이하로 설정해야 합니다.");
+        }
+        if (!loginId.matches("^[A-Za-z0-9]+$")) {
+            throw new IllegalArgumentException("아이디는 영문과 숫자만 사용할 수 있습니다.");
+        }
+        if (loginId.toLowerCase().startsWith(UserConstants.DELETED_USER_PREFIX)) {
+            throw new IllegalArgumentException(
+                "'" + UserConstants.DELETED_USER_PREFIX + "'로 시작하는 ID는 사용할 수 없습니다.");
+        }
+        return userRepository.existsByLoginId(loginId);
+    }
+
+    public boolean isPhoneAvailable(String phone) {
+        if (phone == null || phone.trim().isEmpty()) {
+            throw new IllegalArgumentException("연락처를 입력해주세요.");
+        }
+        if (!phone.matches("^[0-9]{11}$")) {
+            throw new IllegalArgumentException("연락처는 11자리 숫자만 입력 가능합니다.");
+        }
+        return userRepository.existsByPhone(phone);
+    }
+
+    public void validatePasswordRule(String password) {
+        if (password == null || password.isEmpty()) {
+            throw new IllegalArgumentException("비밀번호를 입력해야 합니다.");
+        }
+        if (password.length() < 8 || password.length() > 24) {
+            throw new IllegalArgumentException("비밀번호는 8자 이상 24자 이하로 설정해야 합니다.");
+        }
+        if (!password.matches("^[A-Za-z0-9!@#$%^&*()]+$")) {
+            throw new IllegalArgumentException("비밀번호는 영문, 숫자, 특수문자만 사용할 수 있습니다.");
+        }
+        boolean hasUpperCase  = password.matches(".*[A-Z].*");
+        boolean hasLowerCase  = password.matches(".*[a-z].*");
+        boolean hasDigit      = password.matches(".*[0-9].*");
+        boolean hasSpecialChar = password.matches(".*[!@#$%^&*()].*");
+        if (!hasUpperCase || !hasLowerCase || !hasDigit || !hasSpecialChar) {
+            throw new IllegalArgumentException(
+                "비밀번호는 대문자, 소문자, 숫자, 특수문자를 각각 최소 1개 이상 포함해야 합니다.");
+        }
+    }
+
+    @Transactional(readOnly = true)
+    public UserResponseDTO getUserInfo(Long userId) {
+        UserEntity userEntity = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
+        return toResponseDTO(userEntity);
+    }
+
+    @Transactional
+    public UserResponseDTO updateUserInfo(Long userId, UserUpdateRequestDTO userDTO) {
+        UserEntity userEntity = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
+
+        if (!userEntity.getPhone().equals(userDTO.getPhone())
+                && userRepository.existsByPhone(userDTO.getPhone())) {
+            throw new IllegalArgumentException("이미 사용중인 연락처 입니다.");
+        }
+
+        userEntity.updateInfo(userDTO.getName(), userDTO.getPhone(), userDTO.getAddress());
+        return toResponseDTO(userEntity);
+    }
+
+    @Transactional(readOnly = true)
+    public String findId(LoginIdRequestDTO loginIdRequestDTO) {
+        validateFindIdDTO(loginIdRequestDTO);
+        UserEntity userEntity = userRepository
+                .findByNameAndPhone(loginIdRequestDTO.name(), loginIdRequestDTO.phone())
+                .orElseThrow(() -> new IllegalArgumentException("일치하는 사용자가 없습니다."));
+        return maskLoginId(userEntity.getLoginId());
+    }
+
+    @Transactional(readOnly = true)
+    public boolean verifyPassword(Long userId, String password) {
+        UserEntity user = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
+        return passwordEncoder.matches(password, user.getPassword());
+    }
+
+    // 탈퇴 시 shop 도메인 처리는 WithdrawFacade로 위임
+    // WithdrawFacade에서만 호출 — 유저 논리 삭제만 담당
+    // 탈퇴 전 주문/배송/장바구니 처리는 WithdrawFacade 책임
+    @Transactional
+    public void markAsWithdrawn(Long userId) {
+        UserEntity user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다."));
+        user.withdraw();
+    }
+
+    // ── private 헬퍼 ──────────────────────────────────────────
+
     private void validateName(UserRegisterRequestDTO userDTO) {
         if (userDTO.getName() == null || userDTO.getName().trim().isEmpty()) {
             throw new IllegalArgumentException("이름을 입력해야 합니다.");
         }
-
         if (userDTO.getName().length() < 2 || userDTO.getName().length() > 6) {
             throw new IllegalArgumentException("이름은 2자 이상 6자 이하로 입력해야 합니다.");
         }
-
         if (!userDTO.getName().matches("^[가-힣\\s]+$")) {
             throw new IllegalArgumentException("이름은 한글만 사용할 수 있습니다.");
         }
     }
 
-    // 아이디 중복 확인 - 사용 가능 여부 반환
-    public boolean isLoginIdAvailable(String loginId) {
-        if (loginId == null || loginId.trim().isEmpty()) {
-            throw new IllegalArgumentException("아이디를 입력해주세요.");
-        }
-
-        if (loginId.length() < 4 || loginId.length() > 20) {
-            throw new IllegalArgumentException("아이디는 4자 이상 20자 이하로 설정해야 합니다.");
-        }
-
-        if (!loginId.matches("^[A-Za-z0-9]+$")) {
-            throw new IllegalArgumentException("아이디는 영문과 숫자만 사용할 수 있습니다.");
-        }
-
-        if (loginId.toLowerCase().startsWith(UserConstants.DELETED_USER_PREFIX)) {
-            throw new IllegalArgumentException("'deleted'로 시작하는 ID는 사용할 수 없습니다.");
-        }
-
-        return userRepository.existsByLoginId(loginId);
-    }
-
-    //약관 동의 검증
     private void validateTermsAgreement(UserRegisterRequestDTO userDTO) {
         if (userDTO.getTermsAgreed() == null || !userDTO.getTermsAgreed()) {
             throw new IllegalArgumentException("이용약관에 동의해야 합니다.");
         }
     }
 
-    // 연락처 중복 확인 - 사용 가능 여부 반환
-    public boolean isPhoneAvailable(String phone) {
-        if (phone == null || phone.trim().isEmpty()) {
-            throw new IllegalArgumentException("연락처를 입력해주세요.");
+    private void validateFindIdDTO(LoginIdRequestDTO dto) {
+        if (dto.name() == null || dto.name().isBlank()) {
+            throw new IllegalArgumentException("[SYSTEM] 이름은 필수 입력 항목입니다.");
         }
-
-        if (!phone.matches("^[0-9]{11}$")) {
-            throw new IllegalArgumentException("연락처는 11자리 숫자만 입력 가능합니다.");
-        }
-
-        return userRepository.existsByPhone(phone);
-    }
-
-    // 비밀번호 보안 규칙 검증
-    public void validatePasswordRule(String password) {
-        if (password == null || password.isEmpty()) {
-            throw new IllegalArgumentException("비밀번호를 입력해야 합니다.");
-        }
-
-        if (password.length() < 8 || password.length() > 24) {
-            throw new IllegalArgumentException("비밀번호는 8자 이상 24자 이하로 설정해야 합니다.");
-        }
-
-        if (!password.matches("^[A-Za-z0-9!@#$%^&*()]+$")) {
-            throw new IllegalArgumentException("비밀번호는 영문, 숫자, 특수문자만 사용할 수 있습니다.");
-        }
-
-        boolean hasUpperCase = password.matches(".*[A-Z].*");
-        boolean hasLowerCase = password.matches(".*[a-z].*");
-        boolean hasDigit = password.matches(".*[0-9].*");
-        boolean hasSpecialChar = password.matches(".*[!@#$%^&*()].*");
-
-        if (!hasUpperCase || !hasLowerCase || !hasDigit || !hasSpecialChar) {
-            throw new IllegalArgumentException(
-                    "비밀번호는 대문자, 소문자, 숫자, 특수문자를 각각 최소 1개 이상 포함해야 합니다.");
+        if (dto.phone() == null || dto.phone().isBlank()) {
+            throw new IllegalArgumentException("[SYSTEM] 연락처는 필수 입력 항목입니다.");
         }
     }
 
-    //DTO를 Entity로 변환 및 암호화된 비밀번호 설정
+    private String maskLoginId(String loginId) {
+        int length = loginId.length();
+        int maskLength = length / 2;
+        return loginId.substring(0, length - maskLength) + "*".repeat(maskLength);
+    }
+
     private UserEntity convertToEntity(UserRegisterRequestDTO userDTO) {
         return UserEntity.builder()
                 .loginId(userDTO.getLoginId())
@@ -147,114 +181,14 @@ public class UserService {
                 .build();
     }
 
-    // 로그인 ID로 본인 정보 조회
-    @Transactional(readOnly = true)
-    public UserResponseDTO getUserInfo(Long userId) {
-        //DB에서 회원 조회
-        UserEntity userEntity = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
-
-        //비밀번호 제외하고 DTO로 변환하여 반환
+    private UserResponseDTO toResponseDTO(UserEntity entity) {
         return UserResponseDTO.builder()
-                .userId(userEntity.getUserId())
-                .loginId(userEntity.getLoginId())
-                .name(userEntity.getName())
-                .phone(userEntity.getPhone())
-                .address(userEntity.getAddress())
-                .points(userEntity.getPoints())
+                .userId(entity.getUserId())
+                .loginId(entity.getLoginId())
+                .name(entity.getName())
+                .phone(entity.getPhone())
+                .address(entity.getAddress())
+                .points(entity.getPoints())
                 .build();
-    }
-
-    // 로그인 ID로 본인 정보 수정
-    @Transactional
-    public UserResponseDTO updateUserInfo(Long userId, UserUpdateRequestDTO userDTO) {
-        //DB에서 회원 조회
-        UserEntity userEntity = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
-
-        // 연락처 변경 시 중복 검증
-        if (!userEntity.getPhone().equals(userDTO.getPhone())
-                && userRepository.existsByPhone(userDTO.getPhone())) {
-            throw new IllegalArgumentException("이미 사용중인 연락처 입니다.");
-        }
-
-        //회원 정보 수정(Entity 업데이트)
-        userEntity.updateInfo(userDTO.getName(), userDTO.getPhone(), userDTO.getAddress());
-
-        return UserResponseDTO.builder()
-                .userId(userEntity.getUserId())
-                .loginId(userEntity.getLoginId())
-                .name(userEntity.getName())
-                .phone(userEntity.getPhone())
-                .address(userEntity.getAddress())
-                .points(userEntity.getPoints())
-                .build();
-    }
-
-    // 아이디 찾기
-    @Transactional(readOnly = true)
-    public String findId(LoginIdRequestDTO loginIdRequestDTO) {
-        validateDTO(loginIdRequestDTO);
-
-        UserEntity userEntity = userRepository.findByNameAndPhone(loginIdRequestDTO.name(), loginIdRequestDTO.phone())
-                .orElseThrow(() -> new IllegalArgumentException("일치하는 사용자가 없습니다."));
-
-        return maskLoginId(userEntity.getLoginId());
-    }
-
-    private String maskLoginId(String loginId) {
-        // loginId의 반절만 마스킹 처리
-        int length = loginId.length();
-        int maskLength = length / 2;
-        return loginId.substring(0, length - maskLength) +
-                "*".repeat(maskLength);
-    }
-
-    private void validateDTO(LoginIdRequestDTO userFindDTO) {
-        if (userFindDTO.name() == null || userFindDTO.name().isBlank()) {
-            throw new IllegalArgumentException("[SYSTEM] 이름은 필수 입력 항목입니다.");
-        }
-        if (userFindDTO.phone() == null || userFindDTO.phone().isBlank()) {
-            throw new IllegalArgumentException("[SYSTEM] 연락처는 필수 입력 항목입니다.");
-        }
-    }
-
-    // 비밀번호 인증
-    @Transactional(readOnly = true)
-    public boolean verifyPassword(Long userId, String password) {
-        UserEntity user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
-        
-        return passwordEncoder.matches(password, user.getPassword());
-    }
-
-    // 회원 탈퇴
-    @Transactional
-    public void withdrawUser(Long userId) {
-        log.info("[USER] 회원 탈퇴 시작 {}", userId);
-
-        // 결제 미완료/에러(P) 자동 삭제
-        List<Order> errorOrders = orderRepository.findAllBySenderIdAndOrderStatus(userId, "P");
-        if (!errorOrders.isEmpty()) {
-            log.info("[탈퇴] 결제 미완료 주문 {}건 자동 삭제 처리", errorOrders.size());
-            orderRepository.deleteAll(errorOrders);
-        }
-
-        // 진행 중인 주문이 있는지 확인
-        boolean hasActiveOrders = deliveryRepository.existsByOrder_SenderIdAndDeliveryStatusIn(userId, List.of("S"));
-        if (hasActiveOrders) {
-            throw new IllegalStateException("현재 배송 중인 상품이 있어 탈퇴할 수 없습니다.\n상품이 도착하여 구매 확정(배송 완료)된 후 다시 시도해주세요.");
-        }
-
-        cartDAO.clearCartByUserId(userId); // 장바구니 비우기
-
-        UserEntity user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다."));
-        user.withdraw();
-
-        // SecurityContext 초기화 (로그아웃 처리)
-        SecurityContextHolder.clearContext();
-
-        log.info("[USER] 회원 탈퇴 완료 {}", userId);
     }
 }
